--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
+    <title>search gallery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load ="partials/header.html" />
-
-    <section>
-      <!-- <h1>Lorem ipsum dolor sit amet.</h1> -->
-      <!-- Path to images as from index.html file -->
-      <!-- <img src="./img/javascript.svg" alt="" /> -->
-    </section>
-
-    <!-- Loads the specified .html file -->
     <load ="partials/search.html" />
 
     <script type="module" src="/main.js"></script>
